# discrete-log

./: .gitignore  AlgebraicFactorBase.cpp  AlgebraicFactorBase.h  CMakeLists.txt  FactorBase.cpp  FactorBase.h  FactorBaseGenerator.cpp  FactorBaseGenerator.h  LICENSE  NumberFieldSieve.cpp  NumberFieldSieve.h  Polynomial.cpp  Polynomial.h  PolynomialGenerator.cpp  PolynomialGenerator.h  README.md  SmoothGenerator.cpp  SmoothGenerator.h  main.cpp
